# farmisto

./: .gitattributes  .gitignore  .lfsconfig  Cargo.toml  LICENSE  README.md
ai/: Cargo.toml
client/: Cargo.toml  README.md  build.rs
client/src/: main.rs  mode.rs  monitoring.rs
client/src/animatoro/: mod.rs
client/src/assets/: asset.rs  behaviours.rs  font.rs  fs.rs  manager.rs  mod.rs  pipeline.rs  prefabs.rs  props.rs  sampler.rs  shader.rs  spine.rs  sprite.rs  texture.rs  tileset.rs
client/src/assets/includes/: watcher.ps1
client/src/bumaga/: mod.rs
client/src/editor/: mod.rs  mode.rs  selection.rs
client/src/editor/operations/: delete.rs  duplicate.rs  mod.rs  movement.rs  rotation.rs  scale.rs
client/src/editor/ui/: mod.rs
client/src/engine/: app.rs  armature.rs  base.rs  buffers.rs  commands.rs  config.rs  input.rs  material.rs  mesh.rs  mod.rs  texture.rs  uniform.rs
client/src/engine/animatoro/: mod.rs
client/src/engine/assets/: fs.rs  generic.rs  manager.rs  mesh.rs  mod.rs  pipeline.rs  prefabs.rs  props.rs  sampler.rs  server.rs  shader.rs  space3.rs  spine.rs  sprite.rs  texture.rs  tileset.rs
client/src/engine/base/: mod.rs  pipeline.rs  screen.rs  shader.rs
client/src/engine/bumaga/: mod.rs
client/src/engine/renderers/: mod.rs  my.rs  scene.rs  sprites.rs
client/src/engine/rendering/: constants.rs  metrics.rs  mod.rs  objects.rs  scene.rs  spine.rs  uniforms.rs  vertex.rs
client/src/gameplay/: behaviours.rs  camera.rs  data.json  events_handling.rs  interactions.rs  metrics.rs  mod.rs  mode.rs  objects.rs  rendering.rs  representation.rs  targeting.rs  user_input.rs
client/src/intro/: mod.rs
client/src/menu/: mod.rs
client/src/modes/: gameplay.rs  loading.rs  menu.rs  mod.rs
client/src/translation/: mod.rs
game/: .gitignore  Cargo.toml  README.md
game/src/: api.rs  cheats.rs  collections.rs  data.rs  inspection.rs  instantiation.rs  lib.rs  math.rs  model.rs  persistence.rs  update.rs  view.rs
game/src/actions/: build.rs  collect_corpse.rs  dig_place.rs  dig_up_crop.rs  disassemble.rs  disassemble_cementer.rs  disassemble_door.rs  drop_item.rs  fertilize.rs  fill_basin.rs  finish_assembly.rs  harvest_crop.rs  install_equipment.rs  mod.rs  move_assembly.rs  plant_crop.rs  plow_farmland.rs  pour_water.rs  put_item.rs  put_item_into.rs  relax.rs  repair_generic_device.rs  start_assembly.rs  survey.rs  take_item.rs  take_item_from.rs  toggle_door.rs  toggle_generic_device.rs  uninstall_equipment.rs  use_equipment.rs
game/src/actions/creature/: eat_crop.rs  eat_food.rs  mod.rs  move_creature.rs  take_nap.rs
game/src/actions/farmer/: build.rs  cancel_assembly.rs  collect_corpse.rs  dig_place.rs  dig_up_crop.rs  drop_item.rs  fertilize.rs  fill_basin.rs  finish_assembly.rs  harvest_crop.rs  install_equipment.rs  mod.rs  move_assembly.rs  move_farmer.rs  plant_crop.rs  pour_water.rs  put_item_into.rs  relax.rs  remove_construction.rs  repair_generic_device.rs  survey.rs  take_item_from.rs  tie_creature.rs  toggle_backpack.rs  toggle_generic_device.rs  toggle_surveying_option.rs  uninstall_equipment.rs  untie_creature.rs  use_equipment.rs  use_theodolite.rs  water_crop.rs
game/src/ai/: ai.json  mod.rs  nature.rs
game/src/domains/: building.rs  inventory.rs  mod.rs  physics.rs  planting.rs  shapes.rs
game/src/math/: array.rs  collision.rs  mod.rs  random.rs  raycast.rs  vector.rs
game/src/persistence/: collection.rs  grouping.rs  json.rs  knowledge.rs  mod.rs  persist.rs  shared.rs
game/src/rules/: is_placement_valid.rs  is_target_reachable.rs  is_tile_empty.rs  mod.rs
game/tests/: test_building.rs  test_domain_building.rs  test_domain_inventory.rs  test_domain_physics.rs  test_drops.rs
game/tests/testing/: mod.rs
(+496 files in other folders)
