[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
game = { path = "../game" }
network = { path = "../network" }
server = { path = "../server" }
log = "0.4"
env_logger = { version = "0.9", default-features = false, features = ["humantime"] }
sdl2 = { version = "0.35" }
winapi = { version = "0.3.9", features = ["shellscalingapi"] }
bytemuck = { version = "1.9", features = ["derive"] }
glam = "0.20"
ash = "0.37"
image = { version = "0.24", default-features = false, features = ["png"] }
png = { version = "0.17" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
datamap = { path = "../datamap" }
rusqlite = { version = "0.27", default-features = false, features = ["serde_json", "bundled"] }
libfmod = { version = "2.2.601" }
rusty_spine = "0.5.0"
prometheus = { version="0.13.3", features=["process"]}
lazy_static = "1.4.0"