[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
rusqlite = { version = "0.27", default-features = false, features = ["serde_json", "bundled"] }
game_derive = { path = "../game_derive" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
bincode = "2.0.0-rc.1"
