[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
datamap = { path = "../datamap" }
rusqlite = { version = "0.27", default-features = false, features = ["serde_json", "bundled"] }
log = "0.4"
bincode = { version="2.0.0-rc.2", features=["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
nanorand = {version = "0.7"}